--- a/style.css
+++ b/style.css
@@ -1,7 +1,10 @@
+@import url('https://fonts.googleapis.com/css2?family=Poppins&display=swap');
+
 * {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+    font-family: 'Poppins', 'sans-serif';
 }
 
 body {
@@ -18,6 +21,13 @@ body {
     background-color: red;
 }
 
+#relatorio {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
+
 form {
     margin: 5vh 0;
     display: flex;
@@ -29,6 +39,11 @@ form {
 #tabela-produtos {
     margin-top: 5vh;
     border: 2px solid black;
+}
+
+button{
+    padding: 5px;
+    cursor: pointer;
 }
 
 table {
@@ -58,5 +73,11 @@ tbody tr td {
 }
 
 th, tr, td {
-    width: auto; /* Remova a largura fixa para todas as células */
+    width: 200px; /* Remova a largura fixa para todas as células */
+    border: 1px solid black;
+    text-align: center;
+}
+
+ul, li {
+    list-style: none;
 }
