--- a/style.css
+++ b/style.css
@@ -7,11 +7,29 @@
     font-family: 'Poppins', 'sans-serif';
 }
 
+main{
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    padding: 2rem;
+}
+
 body {
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
+}
+
+#client-list-div{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    margin-top: 5vh;
+    margin-bottom: 5vh;
 }
 
 .container {
@@ -26,6 +44,7 @@ body {
     flex-direction: column;
     align-items: center;
     justify-content: center;
+    width: 80%;
 }
 
 form {
@@ -44,6 +63,8 @@ form {
 button{
     padding: 5px;
     cursor: pointer;
+    margin-top: 2vh;
+    margin-bottom: 2vh;
 }
 
 table {
